--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,4 +2,9 @@
 let year = d.getFullYear() %>
 <footer>
   <p class="copyright">&copy;<%= year %>, CSE 340 App</p>
+   <p>
+    <a href="/inv/cause-error" style="color:#b00020; font-weight:bold; background:#fff; padding:0.3em 0.8em; border-radius:4px; border:2px solid #b00020; text-decoration:none;">
+      Trigger Server Error
+    </a>
+  </p>
 </footer>
