--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -14,7 +14,16 @@
     <% if (messages && messages.success) { %>
       <div class="flash-message success"><%= messages.success %></div>
     <% } %>
-    <form class="login-form" action="/account/login" method="post">
+    <% if (errors && errors.errors && errors.errors.length > 0) { %>
+  <div class="flash-message error">
+    <ul>
+      <% errors.errors.forEach(function(error) { %>
+        <li><%= error.msg %></li>
+      <% }) %>
+    </ul>
+  </div>
+<% } %>
+   <form id="loginForm" action="/account/login" method="post">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
 
